# cpusb

./: .gitignore  Makefile  Makefile.in  README  TODO  configure  configure.ac  doxyfile  doxyfile.in  index.html
debian/: README.Debian  README.source  changelog  control  copyright  cpusb.cron.d.ex  cpusb.default.ex  cpusb.doc-base.EX  emacsen-install.ex  emacsen-remove.ex  emacsen-startup.ex  files  init.d.ex  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  menu.ex  postinst.ex  postrm.ex  preinst.ex  prerm.ex  watch.ex
debian/cpusb/DEBIAN/: control  md5sums
src/: .conf  .cpusb  cpusb.c  cpusb.h  doxyfile  makefile  tags
src/doc/: man-cpusb-user.tex
